--- a/nuxt/hs/ui/package.json
+++ b/nuxt/hs/ui/package.json
@@ -14,6 +14,8 @@
     "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
+    "nanoid": "^5.0.9",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "vue": "latest",
@@ -23,11 +25,11 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.15.1",
     "@nuxt/typescript-build": "^3.0.2",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.2",
     "@vue/test-utils": "^2.4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "sass": "^1.82.0",
+    "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "typescript": "^5.7.2"
   }
