--- a/flutter/hs/first/android/app/build.gradle
+++ b/flutter/hs/first/android/app/build.gradle
@@ -5,6 +5,53 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    flutterVersionCode = '1'
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    flutterVersionName = '1.0'
+}
+
+import java.util.Properties
+
+println "Project Root Directory: ${rootProject.projectDir}"
+
+// .env 파일 경로 확인
+def envFile = file("${project.rootDir}/../.env")  // 프로젝트 루트 디렉토리인 flutter_ddd_test를 가리킴
+println ".env file path: ${envFile}"
+
+if (envFile.exists()) {
+    def properties = new Properties()
+    envFile.withReader("UTF-8") { reader ->
+        properties.load(reader)
+    }
+    project.ext {
+        KAKAO_NATIVE_APP_KEY = properties.getProperty("KAKAO_NATIVE_APP_KEY")
+    }
+} else {
+    throw new GradleException(".env file not found")
+}
+
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
 android {
     namespace = "com.example.first"
     compileSdk = flutter.compileSdkVersion
@@ -29,6 +76,33 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
+
+
+    def isWindows = System.getProperty("os.name").toLowerCase().contains("win")
+    def debugKeyStorePath = isWindows ? 'C:/Users/Playdata/.android/debug.keystore' : '/home/oem/.android/debug.keystore'
+    def releaseKeyStorePath = isWindows ? 'C:/Users/Playdata/.android/release-key.jks' : '/home/oem/.android/release-key.jks'
+
+    println "Debug Keystore Path: ${debugKeyStorePath}"
+    println "Release Keystore Path: ${releaseKeyStorePath}"
+
+    signingConfigs {
+        debug {
+            storeFile file(debugKeyStorePath)
+//            storeFile file('/home/oem/.android/debug.keystore')  // debug 키스토어 경로
+            storePassword 'android'                              // debug 키스토어 비밀번호
+            keyAlias 'androiddebugkey'                           // debug 키 별칭
+            keyPassword 'android'                                // debug 키 비밀번호
+        }
+
+        release {
+            storeFile file(releaseKeyStorePath)
+//            storeFile file('/home/oem/release-key.jks')         // release 키스토어 경로
+            storePassword 'your_keystore_password'              // release 키스토어 비밀번호
+            keyAlias 'your_key_alias'                           // release 키 별칭
+            keyPassword 'your_key_password'                     // release 키 비밀번호
+        }
+    }
+
 
     buildTypes {
         release {
