--- a/nuxt/notes/ui/package.json
+++ b/nuxt/notes/ui/package.json
@@ -27,6 +27,7 @@
     "@nuxt/typescript-build": "^3.0.2",
     "@types/node": "^22.10.2",
     "@vue/test-utils": "^2.4.6",
+    "aws-sdk": "^2.1692.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.83.0",
