--- a/nuxt/notes/ui/package.json
+++ b/nuxt/notes/ui/package.json
@@ -11,6 +11,7 @@
     "start": "nuxt start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.741.0",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
@@ -27,7 +28,6 @@
     "@nuxt/typescript-build": "^3.0.2",
     "@types/node": "^22.10.2",
     "@vue/test-utils": "^2.4.6",
-    "aws-sdk": "^2.1692.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.83.0",
