--- a/nuxt/notes/ui/package.json
+++ b/nuxt/notes/ui/package.json
@@ -17,9 +17,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
+    "@vueup/vue-quill": "^1.2.0",
     "nanoid": "^5.0.9",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
+    "quill": "^2.0.3",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify-nuxt-module": "^0.18.3"
