--- a/nuxt/notes/ui/package.json
+++ b/nuxt/notes/ui/package.json
@@ -18,10 +18,14 @@
     "@pinia/nuxt": "^0.9.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@vueup/vue-quill": "^1.2.0",
+    "browser-image-compression": "^2.0.2",
+    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "nanoid": "^5.0.9",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "quill": "^2.0.3",
+    "uuid": "^11.0.5",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify-nuxt-module": "^0.18.3"
