--- a/nuxt/notes/ui/package.json
+++ b/nuxt/notes/ui/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.741.0",
     "@aws-sdk/lib-storage": "^3.741.0",
+    "@aws-sdk/s3-request-presigner": "^3.743.0",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
