--- a/flutter/jh/second/android/app/build.gradle
+++ b/flutter/jh/second/android/app/build.gradle
@@ -125,7 +125,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutter_ddd_test"
+        applicationId "com.example.second"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
