--- a/nuxt/jge/ui/package.json
+++ b/nuxt/jge/ui/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host 0.0.0.0",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,15 +13,20 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.741.0",
     "@aws-sdk/lib-storage": "^3.741.0",
+    "@aws-sdk/s3-request-presigner": "^3.743.0",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@vueup/vue-quill": "^1.2.0",
+    "browser-image-compression": "^2.0.2",
+    "html-minifier": "^4.0.0",
+    "html-minifier-terser": "^7.2.0",
     "nanoid": "^5.0.9",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "quill": "^2.0.3",
+    "uuid": "^11.0.5",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify-nuxt-module": "^0.18.3"
