--- a/nuxt/ssi/ui/package.json
+++ b/nuxt/ssi/ui/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
+    "@aws-sdk/lib-storage": "^3.744.0",
     "@aws-sdk/s3-request-presigner": "^3.744.0",
     "@mdi/font": "^7.4.47",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.9.0",
     "@tosspayments/payment-widget-sdk": "^0.12.0",
     "@vueup/vue-quill": "^1.2.0",
+    "aws-sdk": "^2.1692.0",
     "browser-image-compression": "^2.0.2",
     "html-minifier-terser": "^7.2.0",
     "nanoid": "^5.0.9",
