feat: [이상훈] OpenAI 구동 확인 [SKAI8-x]

--- a/flutter/notes/first/pubspec.yaml
+++ b/flutter/notes/first/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
 
   kakao_flutter_sdk: ^1.9.6
   flutter_secure_storage: ^9.2.4
+  flutter_quill_extensions: ^11.0.0-dev.7
+  flutter_quill: ^11.0.0-dev.21
+  uuid: ^4.5.1
+  vsc_quill_delta_to_html: ^1.0.5
+  amazon_s3_cognito: ^0.8.1
 
 dev_dependencies:
   flutter_test:
