feat: [이상훈] Flutter에서 s3 업로드 준비 [SKAI8-x]

--- a/flutter/notes/first/android/app/src/main/AndroidManifest.xml
+++ b/flutter/notes/first/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
         android:label="first"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- 🔹 S3 TransferService 추가 -->
+        <service
+            android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+            android:enabled="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
