--- a/flutter/notes/first/pubspec.yaml
+++ b/flutter/notes/first/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   flutter_quill: ^11.0.0-dev.21
   uuid: ^4.5.1
   vsc_quill_delta_to_html: ^1.0.5
-  amazon_s3_cognito: ^0.8.1
+  aws_signature_v4: ^0.6.3
+#  amazon_s3_cognito: ^0.8.1
 
 dev_dependencies:
   flutter_test:
