--- a/fastapi/ssi/dlls_demo/.gitignore
+++ b/fastapi/ssi/dlls_demo/.gitignore
@@ -1,2 +1,10 @@
 # Ignore .venv & things
 .venv/
+game_fined_tuned_model/
+game_fine_tuned_model/
+
+=0.26.0
+cnn_model.h5
+speech.mp3
+test.txt
+training_data.jsonl
