feat:[손승일] flutter blog 추가

--- a/flutter/ssi/first/pubspec.yaml
+++ b/flutter/ssi/first/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +42,14 @@ dependencies:
 
   kakao_flutter_sdk: ^1.9.6
   flutter_secure_storage: ^9.2.4
+  flutter_quill_extensions: ^11.0.0-dev.7
+  flutter_quill: ^11.0.0-dev.21
+  uuid: ^4.5.1
+  vsc_quill_delta_to_html: ^1.0.5
+  aws_signature_v4: ^0.6.3
+  aws_sdk: ^0.0.3
+  html: ^0.15.5
+  aws_sdk_flutter: ^0.0.1-dev.1
 
 
 dev_dependencies:
