--- a/flutter/ssi/first/android/app/src/main/AndroidManifest.xml
+++ b/flutter/ssi/first/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,12 @@
         android:label="first"
         android:name="android.app.Application"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- 🔹 S3 TransferService 추가 -->
+        <service
+            android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
+            android:enabled="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
