--- a/flutter/ssi/first/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/flutter/ssi/first/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\son\Desktop\SK_AI\SK-Networks-8-Notes\flutter\first
+FLUTTER_APPLICATION_PATH=C:\Users\son\Desktop\SK_AI\SK-Networks-8-Notes\flutter\ssi\first
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
