--- a/flutter/ssi/first/pubspec.yaml
+++ b/flutter/ssi/first/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   aws_sdk: ^0.0.3
   html: ^0.15.5
   aws_sdk_flutter: ^0.0.1-dev.1
+  webview_flutter: ^4.9.0
+  webview_flutter_wkwebview: ^3.18.2
 
 
 dev_dependencies:
