feat: [최병준] 카카오맵 구성 [SKAI8-x]

--- a/flutter/cbj/first/android/app/build.gradle
+++ b/flutter/cbj/first/android/app/build.gradle
@@ -125,7 +125,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.first"
+        applicationId "com.example.flutter_ddd_test"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
