--- a/.gitignore
+++ b/.gitignore
@@ -983,3 +983,6 @@ fabric.properties
 *.jpeg
 *.png
 *.webp
+fastapi/jge/dlls_demo/game_fine_tuned_model/model.safetensors
+fastapi/jge/dlls_demo/results/checkpoint-1000/model.safetensors
+fastapi/jge/dlls_demo/results/checkpoint-1000/optimizer.pt
