--- a/flutter/jge/first/android/app/src/main/AndroidManifest.xml
+++ b/flutter/jge/first/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" android:required="false"/>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
     <application
         android:label="first"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
 
         <!-- 🔹 S3 TransferService 추가 -->
         <service
