--- a/flutter/hs/first/ios/Runner/Info.plist
+++ b/flutter/hs/first/ios/Runner/Info.plist
@@ -2,48 +2,121 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleDisplayName</key>
-	<string>First</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>first</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+   <key>CADisableMinimumFrameDurationOnPhone</key>
+   <true/>
+   <key>CFBundleDevelopmentRegion</key>
+   <string>$(DEVELOPMENT_LANGUAGE)</string>
+   <key>CFBundleDisplayName</key>
+   <string>First</string>
+   <key>CFBundleExecutable</key>
+   <string>$(EXECUTABLE_NAME)</string>
+   <key>CFBundleIdentifier</key>
+   <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+   <key>CFBundleInfoDictionaryVersion</key>
+   <string>6.0</string>
+   <key>CFBundleName</key>
+   <string>first</string>
+   <key>CFBundlePackageType</key>
+   <string>APPL</string>
+   <key>CFBundleShortVersionString</key>
+   <string>$(FLUTTER_BUILD_NAME)</string>
+   <key>CFBundleSignature</key>
+   <string>????</string>
+   <key>CFBundleVersion</key>
+   <string>$(FLUTTER_BUILD_NUMBER)</string>
+   <key>LSRequiresIPhoneOS</key>
+   <true/>
+   <key>UIApplicationSupportsIndirectInputEvents</key>
+   <true/>
+   <key>UILaunchStoryboardName</key>
+   <string>LaunchScreen</string>
+   <key>UIMainStoryboardFile</key>
+   <string>Main</string>
+   <key>UISupportedInterfaceOrientations</key>
+   <array>
+      <string>UIInterfaceOrientationPortrait</string>
+      <string>UIInterfaceOrientationLandscapeLeft</string>
+      <string>UIInterfaceOrientationLandscapeRight</string>
+   </array>
+   <key>UISupportedInterfaceOrientations~ipad</key>
+   <array>
+      <string>UIInterfaceOrientationPortrait</string>
+      <string>UIInterfaceOrientationPortraitUpsideDown</string>
+      <string>UIInterfaceOrientationLandscapeLeft</string>
+      <string>UIInterfaceOrientationLandscapeRight</string>
+   </array>
+
+   <!-- 앱에서 카메라 사용 권한 -->
+   <key>NSCameraUsageDescription</key>
+   <string>이 앱은 사진 촬영을 위해 카메라 접근 권한이 필요합니다.</string>
+
+   <!-- 사진 라이브러리 읽기/쓰기 권한 -->
+   <key>NSPhotoLibraryUsageDescription</key>
+   <string>이 앱은 사진을 업로드하기 위해 사진 라이브러리에 접근합니다.</string>
+   <key>NSPhotoLibraryAddUsageDescription</key>
+   <string>이 앱은 편집된 사진을 저장하기 위해 사진 라이브러리에 접근합니다.</string>
+
+   <!-- 파일 및 저장소 접근 권한 -->
+   <key>UISupportsDocumentBrowser</key>
+   <true/>
+
+   <!-- AWS S3 TransferService 사용을 위한 네트워크 권한 -->
+   <key>NSAllowsArbitraryLoads</key>
+   <true/>
+   <key>NSAllowsArbitraryLoadsInWebContent</key>
+   <true/>
+   <key>NSAllowsArbitraryLoadsForMedia</key>
+   <true/>
+
+   <!-- 백그라운드 업로드 및 다운로드 지원 -->
+   <key>UIBackgroundModes</key>
+   <array>
+      <string>fetch</string>
+      <string>background-processing</string>
+   </array>
+
+   <!-- 카카오 로그인 URL 스킴 -->
+   <key>LSApplicationQueriesSchemes</key>
+   <array>
+      <string>kakaotalk</string>
+      <string>kakaokompassauth</string>
+   </array>
+
+   <!-- 카카오 로그인 및 공유 기능을 위한 Custom URL Scheme -->
+   <key>CFBundleURLTypes</key>
+   <array>
+      <dict>
+         <key>CFBundleURLSchemes</key>
+         <array>
+            <string>kakaoYOUR_APP_KEY</string>
+         </array>
+      </dict>
+   </array>
+
+   <!-- 인터넷 접근 및 AWS 예외 설정 -->
+   <key>NSAppTransportSecurity</key>
+   <dict>
+      <key>NSAllowsArbitraryLoads</key>
+      <true/>
+      <key>NSExceptionDomains</key>
+      <dict>
+         <key>s3.amazonaws.com</key>
+         <dict>
+            <key>NSIncludesSubdomains</key>
+            <true/>
+            <key>NSExceptionAllowsInsecureHTTPLoads</key>
+            <true/>
+            <key>NSExceptionRequiresForwardSecrecy</key>
+            <false/>
+         </dict>
+      </dict>
+   </dict>
+
+   <!-- 위치 정보 사용 권한 -->
+   <key>NSLocationWhenInUseUsageDescription</key>
+   <string>We need your location to provide better services.</string>
+   <key>NSLocationAlwaysUsageDescription</key>
+   <string>We need your location even when the app is in the background.</string>
+
 </dict>
 </plist>
