--- a/flutter/jh/second/pubspec.yaml
+++ b/flutter/jh/second/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -48,6 +52,10 @@ dependencies:
   aws_sdk: ^0.0.3
   html: ^0.15.5
   aws_sdk_flutter: ^0.0.1-dev.1
+  webview_flutter: ^4.9.0
+  webview_flutter_wkwebview: ^3.18.2
+  geolocator: ^13.0.2
+  sensors_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
