update: gitignore 갱신

--- a/.gitignore
+++ b/.gitignore
@@ -983,6 +983,13 @@ fabric.properties
 *.jpeg
 *.png
 *.webp
-fastapi/jge/dlls_demo/game_fine_tuned_model/model.safetensors
-fastapi/jge/dlls_demo/results/checkpoint-1000/model.safetensors
-fastapi/jge/dlls_demo/results/checkpoint-1000/optimizer.pt
+
+# exclude migrations
+migrations
+
+# exclude safetensors, pt
+*.safetensors
+*.pt
+
+# exclude .nuxt
+.nuxt
