--- a/m/notes/first/android/app/src/main/AndroidManifest.xml
+++ b/m/notes/first/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-<!--    <application-->
+    <!-- ✅ 녹음 권한 추가 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+
+    <!--    <application-->
 <!--        android:label="first"-->
 <!--        android:name="${applicationName}"-->
 <!--        android:icon="@mipmap/ic_launcher"-->
