--- a/m/notes/first/pubspec.yaml
+++ b/m/notes/first/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   geolocator: ^13.0.2
   sensors_plus: ^6.1.1
   speech_to_text: ^7.0.0
+  camera: ^0.11.1
 #  kakao_map_plugin: ^0.3.2
 
 dev_dependencies:
