--- a/m/notes/first/pubspec.yaml
+++ b/m/notes/first/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   sensors_plus: ^6.1.1
   speech_to_text: ^7.0.0
   camera: ^0.11.1
-#  kakao_map_plugin: ^0.3.2
+  flutter_tts: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -81,10 +81,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - .env
+  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
